fix: sticky z-index not work

--- a/components/table/style/Table.scss
+++ b/components/table/style/Table.scss
@@ -6,6 +6,7 @@
 
   &__container {
     position: relative;
+    z-index: 1;
   }
 
   &__container table {
